Fix for es logo on Firefox

--- a/src/components/Implementers/implementers.scss
+++ b/src/components/Implementers/implementers.scss
@@ -16,6 +16,10 @@
 
       img {
         padding-right: 15px;
+
+        @include size-tablet() {
+          width: 240px;
+        }
       }
 
       span {
